[package]
name = "libkrshash"
version = "0.1.0"
authors = ["Rahul Powar <rahul@redsift.io>"]
build = "build.rs"

[dependencies]
rkdb = { version = "*", features = ["unchecked_utf8"] }
fasthash = "*"

[build-dependencies]
rkdb = "*"

[lib]
name = "krshash"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 1